--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@types/node": "^24.10.0",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "joi": "^18.0.1"
   }
 }
