feat(deploy): config login 2fa into vite build

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,17 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
+    }
+  ],
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/two-factor-authentication-login", "dest": "/two-factor-authentication-login.html", "status": 200 },
-    { "src": "/two-factor-authentication", "dest": "/two-factor-authentication.html", "status": 200 },
-    { "src": "/messages", "dest": "/messages.html", "status": 200 },
-    { "src": "/(.*)", "dest": "/index.html", "status": 200 }
+    { "src": "/two-factor-authentication-login", "dest": "/two-factor-authentication-login.html" },
+    { "src": "/two-factor-authentication", "dest": "/two-factor-authentication.html" },
+    { "src": "/messages", "dest": "/messages.html" },
+    { "src": "/assets/(.*)", "dest": "/assets/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
