--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
+    "@vercel/static-build": "^2.8.6",
     "vite": "^7.1.7"
   },
   "dependencies": {
