feat(hola mundo)

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Entorno de desarrollo local
-VITE_API_BASE_URL=http://localhost:3000/api
+VITE_API_BASE_URL=https://enigmachat-server.proceruss.com
 VITE_APP_ENV=development
 
 # Configuración de autenticación
