feat(chats): send messages and changing permissions

--- a/.env.production
+++ b/.env.production
@@ -7,4 +7,4 @@ VITE_APP_NAME=EnigmaChat
 VITE_APP_VERSION=1.0.0
 
 # Configuración de WebSocket (si aplica)
-VITE_WS_URL=wss://enigmachat-server.proceruss.com
+VITE_WS_URL=https://enigmachat-server.proceruss.com
