--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,12 @@
 # Entorno de desarrollo local
-VITE_API_BASE_URL=https://enigmachat-server.proceruss.com
+VITE_API_BASE_URL=https://enigmachat-server.proceruss.com/api
+VITE_API_BASE_URLs=http://localhost:3000/api
 VITE_APP_ENV=development
 
 # Configuración de autenticación
 VITE_APP_NAME=EnigmaChat
 VITE_APP_VERSION=1.0.0
 
-# Configuración de WebSocket (si aplica)
-VITE_WS_URL=ws://localhost:3000
+# Configuración de WebSocket
+VITE_WS_URL=https://enigmachat-server.proceruss.com
+VITE_WS_URLs=http://localhost:3000
