fix(user info): Fix user info error on messages footer

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # Entorno de desarrollo local
-VITE_API_BASE_URL=https://enigmachat-server.proceruss.com/api
-VITE_API_BASE_URLs=http://localhost:3000/api
+VITE_API_BASE_URLs=https://enigmachat-server.proceruss.com/api
+VITE_API_BASE_URL=http://localhost:3000/api
 VITE_APP_ENV=development
 
 # Configuración de autenticación
@@ -8,5 +8,5 @@ VITE_APP_NAME=EnigmaChat
 VITE_APP_VERSION=1.0.0
 
 # Configuración de WebSocket
-VITE_WS_URL=https://enigmachat-server.proceruss.com
-VITE_WS_URLs=http://localhost:3000
+VITE_WS_URLs=https://enigmachat-server.proceruss.com
+VITE_WS_URL=http://localhost:3000
