--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ VITE_APP_ENV=development
 # Configuración de autenticación
 VITE_APP_NAME=EnigmaChat
 VITE_APP_VERSION=1.0.0
+VITE_SECRET_KEY=SUPERSECRETO.COM
 
 # Configuración de WebSocket
 VITE_WS_URLs=https://enigmachat-server.proceruss.com
