--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,7 @@ VITE_APP_ENV=production
 # Configuración de autenticación
 VITE_APP_NAME=EnigmaChat
 VITE_APP_VERSION=1.0.0
+VITE_SECRET_KEY=SUPERSECRETO.COM
 
 # Configuración de WebSocket (si aplica)
 VITE_WS_URL=https://enigmachat-server.proceruss.com
